adding space before return

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "reactfastproductive",
   "displayName": "React Fast and Productive",
   "description": "Snippets to generate high speed and productivity when coding",
-  "version": "0.0.1",
-  "publisher": "evertonvargas - lucarampi",
+  "version": "0.0.2",
+  "publisher": "EvertonVargas",
   "galleryBanner": {
     "color": "#232323",
     "theme": "dark"
